ActionChainResult evaluates namespace and action name properties (can't find Jira issue right now)
Also, some Java 1.3 fixes... new MessageFormat(string, locale) wasn't there until 1.4, and neither was Boolean.valueOf(boolean).