@@ -109,7 +109,7 @@ public class OgnlValueStack implements Serializable {
 
         try {
             context.put(XWorkConverter.CONVERSION_PROPERTY_FULLNAME, expr);
-            context.put(REPORT_ERRORS_ON_NO_PROP, Boolean.valueOf(throwExceptionOnFailure));
+            context.put(REPORT_ERRORS_ON_NO_PROP, new Boolean(throwExceptionOnFailure));
             OgnlUtil.setValue(expr, context, root, value);
         } catch (OgnlException e) {
             // ignore
